--- a/cities.html
+++ b/cities.html
@@ -28,7 +28,7 @@
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
     <li>Toronto  (02,809,000)</li>
-    <li>New York</li>
+    <li>New York (08,550,405)</li>
     <li>Halifax  (00,411,000)</li>
 
   </ol>
